[tool.poetry]
name = "vulnsift"
version = "0.1.0"
description = "AI-powered vulnerability triage: turn scanner noise into actionable remediation."
readme = "README.md"
authors = ["Kiril Urbonas"]
license = "MIT"
packages = [{ include = "vulnsift" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
rich = "^13.0"
pydantic = "^2.0"
anthropic = "^0.39"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.6"

[tool.poetry.scripts]
vulnsift = "vulnsift.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
